--- a/src/main/resources/templates/holderInfo.html
+++ b/src/main/resources/templates/holderInfo.html
@@ -3,30 +3,30 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>HolderInfo</title>
-    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 </head>
 
 <body>
-<div id="wrap">
+<video autoplay muted loop th:poster="@{/asset/first_frame.jpg}" id="bgvid">
+    <source th:src="@{/asset/sea.mp4}" type="video/mp4"> </video>
+<div class="fixedElement">
+		<div id="rightheader">
+			<p>
+				Group 60
+			</p>
+		</div>
+		<div id="topheader">
+			<h1 id="title">
+				<a href="#">Linker</a><br>
+				<p class="message">Start to meet new friends:)</p>
+			</h1>
+		</div>
+		
+	</div>
+	
+<div id="wrap5">
     <div id="top_content">
-        <div id="header">
-            <div id="rightheader">
-                <p>
-                    Group 60
-                    <br />
-                </p>
-            </div>
-            <div id="topheader">
-                <h1 id="title">
-                    <a href="#">Linker</a>
-                </h1>
-            </div>
-            <div id="navigation">
-            </div>
-        </div>
         <div id="content">
-            <p id="whereami">
-            </p>
             <h1>
                 Hi! I'm <span th:text="${detail.getEmail_address()}"></span>
             </h1>
@@ -59,7 +59,7 @@
                     </tr>
                 </table>
 
-                <p>
+                <p style="text-align:center">
                     <a th:href="@{/user/partylist}">Go back</a>
                 </p>
         </div>
