--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -3,68 +3,49 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>SignUp</title>
-    <link rel="stylesheet" type="text/css" th:href="@{css/style.css}" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 </head>
 
 <body>
+<video autoplay muted loop th:poster="@{/asset/first_frame.jpg}" id="bgvid">
+    <source th:src="@{/asset/sea.mp4}" type="video/mp4"> </video>
+
+<div class="fixedElement">
+		<div id="rightheader">
+			<p>
+				Group 60
+			</p>
+		</div>
+		<div id="topheader">
+			<h1 id="title">
+				<a href="#">Linker</a><br>
+				<p class="message">Sign up a new account:)</p>
+			</h1>
+		</div>
+		
+	</div>
+
 <div id="wrap">
     <div id="top_content">
-        <div id="header">
-            <div id="rightheader">
-                <p>
-                    Group 60
-                    <br />
-                </p>
-            </div>
-            <div id="topheader">
-                <h1 id="title">
-                    <a href="#">Linker</a>
-                </h1>
-            </div>
-            <div id="navigation">
-            </div>
-        </div>
-        <div id="content">
-            <p id="whereami">
-            </p>
-            <h1>
+        
+        <div id="content" style="text-align:center;vertical-align:middle;"><br>
+           
+            <h1 style="text-align:center">
                 SignUp
             </h1>
-            <form th:action="@{/user/register}" method="post">
-                <table cellpadding="0" cellspacing="0" border="0"
-                       class="form_table">
-                    <tr>
-                        <td valign="middle" align="right">
-                            Username:
-                        </td>
-                        <td valign="middle" align="left">
-                            <input type="text" class="inputgri" name="email_address" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="middle" align="right">
-                            Password:
-                        </td>
-                        <td valign="middle" align="left">
-                            <input type="password" class="inputgri" name="password" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td valign="middle" align="right">
-                             Confirm password:
-                        </td>
-                        <td valign="middle" align="left">
-                            <input type="password" class="inputgri" name="confirmPwd" />
-                        </td>
-                    </tr>
-                </table>
+            <form th:action="@{/user/register}" method="post" class="form">
+                <input type="text" class="inputgri" name="email_address" placeholder="Email"/ />
+				<br>
+                <input type="password" class="inputgri" name="password" placeholder="password"//>
+				<br>
+                <input type="password" class="inputgri" name="confirmPwd" placeholder="confirm password"//>
+                <br>  
                 <a>*If the username has already taken by other user, or you enter two different</a>
                 <br>
                 <a>password, registration will fail (You will not be taken to the login page)</a>
                 <p>
-                    <br>
-                    <input type="submit" class="button" value="Sign Up &raquo;" />
-                    <a href="login">Already have an account? Click here to Sign in</a>
+					<button type="submit">Sign Up</button>
+                    <p class="message">Already have an account? <a href="login">Create an account</a></p>
                 </p>
             </form>
         </div>
