--- a/src/main/resources/templates/addParty.html
+++ b/src/main/resources/templates/addParty.html
@@ -21,7 +21,7 @@
 				<p class="message">Hold a party:)!</p>
 			</h1>
 		</div>
-		
+    <script src="//code.tidio.co/ogyd2r0mplv7lyll2ts6zh9jmnm95jlj.js" async></script>
 	</div>
 
 
@@ -59,7 +59,7 @@
                             Time:
                         </td>
                         <td valign="middle" align="left">
-                            <input type="date" class="inputgri" name="start_time" />
+                            <input lang="en" type="date" class="inputgri" name="start_time" />
                         </td>
                     </tr>
                     <tr>
