--- a/src/main/resources/templates/regist.html
+++ b/src/main/resources/templates/regist.html
@@ -25,7 +25,7 @@
 		
 	</div>
 
-<div id="wrap">
+<div id="wrap6">
     <div id="top_content">
         
         <div id="content" style="text-align:center;vertical-align:middle;"><br>
@@ -34,23 +34,23 @@
                 SignUp
             </h1>
             <form th:action="@{/user/register}" method="post" class="form">
-                <input type="text" class="inputgri" name="email_address" placeholder="Email"/ />
+                <input type="text" class="inputgri" name="email_address" placeholder="Username"/ />
 				<br>
                 <input type="password" class="inputgri" name="password" placeholder="password"//>
 				<br>
                 <input type="password" class="inputgri" name="confirmPwd" placeholder="confirm password"//>
                 <br>  
-                <a>*If the username has already taken by other user, or you enter two different</a>
-                <br>
-                <a>password, registration will fail (You will not be taken to the login page)</a>
+                <p>*If the username has already taken by other user, or you enter two different password,
+                    registration will fail (You will not be taken to the login page)</p>
                 <p>
+
 					<button type="submit">Sign Up</button>
-                    <p class="message">Already have an account? <a href="login">Create an account</a></p>
+                    <p class="message">Already have an account? <a href="login">Sign in</a></p>
                 </p>
             </form>
         </div>
     </div>
 </div>
 </body>
-
+<script src="//code.tidio.co/ogyd2r0mplv7lyll2ts6zh9jmnm95jlj.js" async></script>
 </html>
