--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -76,6 +76,18 @@
 		border-radius:25px;
 		
 	}
+	#wrap6 {
+		width: 500px;
+		margin: 0 auto;
+		position: absolute;
+		left: 50%;
+		top: 45%;
+		transform: translate(-50%,-50%);
+		background:rgba(225,225,225,0.5);
+		border-radius:25px;
+
+	}
+
 	#wrap1 {
 		width: 900px;
 		margin: 0 auto;
@@ -122,7 +134,7 @@
 	}
 	
 	#wrap5 {
-		width: 500px;
+		width: 700px;
 		margin: 0 auto;
 		position: absolute;
 		  left: 50%;
