--- a/src/main/resources/templates/holderInfo.html
+++ b/src/main/resources/templates/holderInfo.html
@@ -27,7 +27,7 @@
 <div id="wrap5">
     <div id="top_content">
         <div id="content">
-            <h1>
+            <h1 style="text-align:center">
                 Hi! I'm <span th:text="${detail.getEmail_address()}"></span>
             </h1>
                 <table cellpadding="0" cellspacing="0" border="0"
@@ -66,5 +66,5 @@
     </div>
 </div>
 </body>
-
+<script src="//code.tidio.co/ogyd2r0mplv7lyll2ts6zh9jmnm95jlj.js" async></script>
 </html>
